--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "express-session": "^1.17.3",
     "mysql2": "^3.4.1",
     "sequelize": "^6.32.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
